--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,11 +15,14 @@
         "sourceType": "module"
     },
     "plugins": [
+        "@typescript-eslint",
         "prettier",
-        "@typescript-eslint"
+        "eslint-plugin-import-helpers"
     ],
     "rules": {
         "camelcase": "off",
+        "prettier/prettier": "error",
+        "import/no-unresolved": "error",
         "@typescript-eslint/naming-convention": [
             "error",
             {
@@ -54,8 +57,8 @@
         "import/no-extraneous-dependencies": [
             "error",
             { "devDependencies": ["**/*.spec.js"] }
-        ],
-        "prettier/prettier": "error"
+        ]
+        // "prettier/prettier": "error"
     },
     "settings": {
         "import/resolver": {
