--- a/ormconfig.json
+++ b/ormconfig.json
@@ -1,7 +1,14 @@
 {
   "type": "postgres",
+  "port": 5432,
   "host": "localhost",
-  "username": "postgres",
-  "password": "root",
-  "database": "rentx"
+  "username": "docker",
+  "password": "ignite",
+  "database": "rentx",
+  
+  "migrations": ["./src/database/migrations/*.ts"],
+  "entities": ["./src/modules/**/entities/*.ts"],
+  "cli": {
+    "migrationsDir": "./src/database/migrations"
+  }
 }
