--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "jest"
   },
   "dependencies": {
-    "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
     "csv-parse": "^5.0.3",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
@@ -23,7 +23,7 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.0",
+    "@types/bcryptjs": "^2.4.2",
     "@types/csv-parse": "^1.2.2",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.4.0",
